almost done with frontpage

--- a/src/main/resources/templates/FrontPage.html
+++ b/src/main/resources/templates/FrontPage.html
@@ -48,7 +48,7 @@
 
         .text {
             display: flex;
-
+            align-items: center;
             flex-direction: column;
             font-size: 25px;
             margin-top: -50px;
@@ -59,6 +59,7 @@
             justify-content: center;
             font-style: italic;
             font-size: 35px;
+            margin-top: 40px;
 
         }
         p3 {
@@ -71,6 +72,7 @@
 
         #memes {
             display: flex;
+            justify-content: space-around;
             margin-top: 40px;
         }
 
@@ -108,10 +110,10 @@
 </div>
 
 <div id="memes">
-    <img src="https://vincentdnl.com/static/d39b503cebf83760d389b29b8c66d03b/6a068/semicolon2.jpg" width="500" height="500">
-    <img src="https://ih1.redbubble.net/image.875111905.4798/fposter,small,wall_texture,product,750x1000.jpg"width="500" height="500">
-    <img src="https://assets-global.website-files.com/5f3c19f18169b62a0d0bf387/60d33be9ea3ab2738bf56e0d_rO0ikUo-hnDwgg9SOQOCEGZGVmnMAzwWIdeUhraC6yoIUcPu6rOs3p9MojWC-BrpT2rqCTxRNg8WKl8cJYlgpScy91C25V0qV-DOnjRsv_FzYGY_6MrLFzNtCjXcTtN7x6-b4T1b.png"width="500" height="500">
-    <img src="https://assets-global.website-files.com/5f3c19f18169b62a0d0bf387/60d33bed2f9c710d07b87e46_j_nvR0IzCf_p7I48K25FPArjljVHgn9nyzrTjs9Y3fN6SWjrhZN31UtY7K0mLmMc11PA3ITO3Pdx2R4aq3ZKnh-Tkp5Id1pwFUssGEYZVNy2dfrtsvZ2aC2bZbrnUyd-gqgKKEja.gif"width="500"height="500">
+    <img src="https://vincentdnl.com/static/d39b503cebf83760d389b29b8c66d03b/6a068/semicolon2.jpg" width="400" height="400">
+    <img src="https://ih1.redbubble.net/image.875111905.4798/fposter,small,wall_texture,product,750x1000.jpg"width="400" height="400">
+    <img src="https://assets-global.website-files.com/5f3c19f18169b62a0d0bf387/60d33be9ea3ab2738bf56e0d_rO0ikUo-hnDwgg9SOQOCEGZGVmnMAzwWIdeUhraC6yoIUcPu6rOs3p9MojWC-BrpT2rqCTxRNg8WKl8cJYlgpScy91C25V0qV-DOnjRsv_FzYGY_6MrLFzNtCjXcTtN7x6-b4T1b.png"width="400" height="400">
+    <img src="https://assets-global.website-files.com/5f3c19f18169b62a0d0bf387/60d33bed2f9c710d07b87e46_j_nvR0IzCf_p7I48K25FPArjljVHgn9nyzrTjs9Y3fN6SWjrhZN31UtY7K0mLmMc11PA3ITO3Pdx2R4aq3ZKnh-Tkp5Id1pwFUssGEYZVNy2dfrtsvZ2aC2bZbrnUyd-gqgKKEja.gif"width="400"height="400">
 </div>
 
 </body>
