--- a/src/main/resources/templates/FrontPage.html
+++ b/src/main/resources/templates/FrontPage.html
@@ -5,6 +5,10 @@
     <title>FrontPage</title>
 
     <style>
+        body {
+        background-color: darkgrey;
+         }
+
         .navigation {
 
             display: flex;
@@ -14,12 +18,8 @@
 
             background-color: #10010c;
             border-bottom-color: antiquewhite;
-
-
         }
-        body {
-            background-color: darkgrey;
-        }
+
 
         h1 {
 
@@ -42,8 +42,14 @@
         h4 {
             display: flex;
             justify-content: center;
-            font-size: 101px;
+            font-size: 90px;
 
+        }
+
+        .wells {
+            display: flex;
+            justify-content: center;
+            margin-top: -50px;
         }
 
         .text {
@@ -51,7 +57,7 @@
             align-items: center;
             flex-direction: column;
             font-size: 25px;
-            margin-top: -50px;
+            margin-top: -5px;
         }
 
         p2 {
@@ -75,8 +81,6 @@
             justify-content: space-around;
             margin-top: 40px;
         }
-
-
     </style>
 </head>
 <body>
@@ -89,6 +93,12 @@
 
 <div>
         <h4>Welcome, Welcome, Welcome!</h4>
+</div>
+
+<div class="wells">
+    <img src="https://cdn-icons-png.flaticon.com/512/3453/3453851.png"width="100" height="100">
+    <img src="https://cdn-icons-png.flaticon.com/512/3453/3453851.png"width="100" height="100">
+    <img src="https://cdn-icons-png.flaticon.com/512/3453/3453851.png"width="100" height="100">
 </div>
 
 <div class="text">
