done with frontpage

--- a/src/main/resources/templates/FrontPage.html
+++ b/src/main/resources/templates/FrontPage.html
@@ -39,17 +39,18 @@
             font-size: 50px;
         }
 
-        h4 {
-            display: flex;
-            justify-content: center;
-            font-size: 90px;
-
-        }
 
         .wells {
             display: flex;
             justify-content: center;
-            margin-top: -50px;
+            margin-top: 50px;
+        }
+        .drawing {
+            display: flex;
+            justify-content: space-around;
+            margin-left: 20px;
+            opacity: 0.4;
+
         }
 
         .text {
@@ -57,7 +58,7 @@
             align-items: center;
             flex-direction: column;
             font-size: 25px;
-            margin-top: -5px;
+            margin-top: -160px;
         }
 
         p2 {
@@ -91,14 +92,15 @@
     <h3><a href="ArtGallery">art gallery</a></h3>
 </div>
 
-<div>
-        <h4>Welcome, Welcome, Welcome!</h4>
-</div>
 
 <div class="wells">
     <img src="https://cdn-icons-png.flaticon.com/512/3453/3453851.png"width="100" height="100">
     <img src="https://cdn-icons-png.flaticon.com/512/3453/3453851.png"width="100" height="100">
     <img src="https://cdn-icons-png.flaticon.com/512/3453/3453851.png"width="100" height="100">
+</div>
+<div class="drawing">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/124824942_2669105396684189_7005471412883620080_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=aee45a&_nc_ohc=-fhi6kMzzoQAX9EzZQh&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVLjwkYsW5XxUiFCIlzCTvNW8v9TPGV8bWdFwuAQegfPrQ&oe=6234A7C9" height="250" width="250">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/124443100_365354954769708_9072367144291408137_n.jpg?_nc_cat=101&ccb=1-5&_nc_sid=aee45a&_nc_ohc=W4swA3Zb0lEAX9HhJeS&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVJqzodMEt7cKeGUk6_j0NC9rbqALxLPdbP15vBhvRwZjw&oe=623319F7"height="250" width="250">
 </div>
 
 <div class="text">
