done with Art Gallery

--- a/src/main/resources/templates/ArtGallery.html
+++ b/src/main/resources/templates/ArtGallery.html
@@ -1,10 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<style>
+    .button {
+        background-color: white;
+        border: none;
+        color: black;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline;
+        font-size: 16px;
+
+    }
+    h1 {
+        display: flex;
+        justify-content: center;
+
+        font-size: 150px ;
+        font-family: Algerian;
+        color: white;
+
+        background-color: #10010c;
+
+    }
+    body {
+        background-color: darkgrey;
+    }
+    p {
+        display: flex;
+        justify-content: center;
+        font-size: 50px;
+    }
+
+
+
+</style>
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Art Gallery</title>
 </head>
 <body>
+<div>
+    <h1>Art Gallery</h1>
+</div>
+<div class="button" >
+    <a href="FrontPage">Go Back</a>
+</div>
+<div>
+    <p> Heres a few drawings i have made. some of them are on ipad and some are traditional. enjoy! </p>
+</div>
+<div class="drawings">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/274467784_952653085456429_8824444153034737026_n.jpg?_nc_cat=100&ccb=1-5&_nc_sid=aee45a&_nc_ohc=63PisCpNFWoAX_r5OE9&_nc_ht=scontent.xx&oh=03_AVJ7SVESRbBExY2UPdM1DsgwQcXJIePnAPOq_NFYaaEK5Q&oe=623B7BD0"width="350"height="500">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/123831993_716628998946980_1595450020402545602_n.jpg?_nc_cat=111&ccb=1-5&_nc_sid=aee45a&_nc_ohc=iWxzEXmAfFoAX8zkOM7&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVIBRJFlOJyLGq4WN0LtqknUex1Y2pNKfe47qvxYXagQHg&oe=623236A2"width="350"height="500">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/51045553_2105812609462377_8870708222026055680_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=aee45a&_nc_ohc=hb-X-UsujvAAX-2ZBYJ&_nc_oc=AQlImZGBnSlEi2ze3-wD_hDpeXJPaCkVoldPr_wDXLJXPsdb4h13elC0y_rrg0XiydM7P4M2f-sn5GGcGOIJ5_FB&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVI3a3qeI9tp8kXCx81Pv2UFcC91SrbOZuQb39y9lPnwiA&oe=623D54AD"width="350"height="500">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/274466805_656266978922568_6057873086577396274_n.jpg?_nc_cat=109&ccb=1-5&_nc_sid=aee45a&_nc_ohc=dBDy32DM4JYAX8TM-MA&_nc_ht=scontent.xx&oh=03_AVLPfxuW90dsY_yTz-9Rn_0EQ9CRQwNe9MwCnll6uZIVxg&oe=623AAF62"width="350"height="350">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/274140324_684090622953278_2533717554666287833_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=aee45a&_nc_ohc=VMJSSyIJ0vMAX8nssUw&_nc_ht=scontent.xx&oh=03_AVLQTqIhexwPIa8-p_KPBH7n7-cVdm4MasW7dlJvEeE4Sg&oe=623D9BBC"width="350"height="350">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/273975395_669013587621239_1574720120909373820_n.jpg?_nc_cat=109&ccb=1-5&_nc_sid=aee45a&_nc_ohc=V2h_idAfNv8AX98pLze&_nc_ht=scontent.xx&oh=03_AVKKvj8B4lKsyllGScexOewcpTssfNuwrdkVTq9ZYJfSUQ&oe=623C431A"width="350"height="350">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/273821673_381252650004861_8058406445136819851_n.jpg?_nc_cat=101&ccb=1-5&_nc_sid=aee45a&_nc_ohc=fB00GDXLV_gAX90KXY-&_nc_ht=scontent.xx&oh=03_AVJm9ckNIBYRymkkQvfQMnWM-5BtPK-AEeEE6WU7dgT7DQ&oe=623D7BE4"width="450"height="350">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/274010739_643469163647328_7660138475509687699_n.jpg?_nc_cat=108&ccb=1-5&_nc_sid=aee45a&_nc_ohc=ProrUUGIeV4AX8nrjdw&_nc_ht=scontent.xx&oh=03_AVLROHQxAQC3ybd6JxTUuBmaoXSk4LL1TaFOyLMMoW-L4A&oe=623B1D72"width="500"height="350">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/273914216_490382495817660_1056514205604716541_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=aee45a&_nc_ohc=h-kPzBveYvsAX-DeZOf&_nc_ht=scontent.xx&oh=03_AVJqZv6FMivUx9Gud92qGgy7UxZ5zJaDhES0uWyW4Jpc0Q&oe=623D4155"width="400"height="350">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/246866644_7057055867653808_4857953987996829800_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=aee45a&_nc_ohc=3HLk6kzvp5AAX9qqRyK&_nc_oc=AQnCW9RpLqEfaOrR37aQM5HpMd2fzQoolnLvf7KxNZSd4cCsTnt3fu8TbLz7oyn14tSyfo3BmcYE5lC6KkCzDkyE&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVK3K7iwJKOeyfztdyYB-QdlBMyUSHhLy3mWKCIHnGca-w&oe=62338FA2"width="350"height="350">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/123795082_402283650809841_6290328995474885533_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=aee45a&_nc_ohc=I2MhxdVj08wAX-_S-VI&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVK71z2Q4chTNdopiBAjQ2yYymSaZ3pmxenC9NjXejM7KQ&oe=6233DB68"width="350"height="350">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/124114365_359350705171187_194686494935938793_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=aee45a&_nc_ohc=M5WKOI3qf7oAX_8Vtq6&_nc_oc=AQmzOiu7O9VewNpb-3Dt02l8kEmixh5Zrw8lLl14LLFnrUytUn5vKpqoF1oIPaRNP4b2s1yeuO-JgKGbnsWKCieq&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVKcX_3DmdLmWV5cnD8WNovOVI_0eqsfTm_Ncz30rJbrZg&oe=6233F21C"width="350"height="350">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/124273149_863307067741208_7153607540791717208_n.jpg?_nc_cat=104&ccb=1-5&_nc_sid=aee45a&_nc_ohc=RnpUnklm-kAAX97pfob&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVLJLPDQMS53Iq1FPh1ESFAUPeXgs5tIzQgxxzuLWsAwYg&oe=623177FE"width="350"height="350">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/124099728_1328052320878288_4971638003879368243_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=aee45a&_nc_ohc=D5FFKR16fkQAX97Ush3&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVLuQXLh9123KN6Z3dV6jXAJynEMEXVx9gjeIixHcdWntA&oe=623445FD"width="350"height="350">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/124443100_365354954769708_9072367144291408137_n.jpg?_nc_cat=101&ccb=1-5&_nc_sid=aee45a&_nc_ohc=W4swA3Zb0lEAX9HhJeS&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVJqzodMEt7cKeGUk6_j0NC9rbqALxLPdbP15vBhvRwZjw&oe=623319F7"width="350"height="350">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/124179580_1676111802549339_5927907508170678211_n.jpg?_nc_cat=100&ccb=1-5&_nc_sid=aee45a&_nc_ohc=a6-uMDemB70AX9QIQ1y&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVLrgD6iC2I6uHM_HNdEsnoNuHBnL8DUeQFRggNpQtRX2w&oe=62336D20"width="350"height="350">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/124824942_2669105396684189_7005471412883620080_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=aee45a&_nc_ohc=-fhi6kMzzoQAX9EzZQh&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVLjwkYsW5XxUiFCIlzCTvNW8v9TPGV8bWdFwuAQegfPrQ&oe=6234A7C9"width="350"height="350">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/123780044_488042575487536_3052821473254028844_n.jpg?_nc_cat=108&ccb=1-5&_nc_sid=aee45a&_nc_ohc=_elP81CoLa0AX-lST_n&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVIwjb8Rbb5cRLGtIU0lg-XAt8i_Bjp-X8hKnWi4jPn4Dg&oe=6231EA2E"width="350"height="350">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/124351310_988061435048094_7101330379374263991_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=aee45a&_nc_ohc=z_vMxNxYDsMAX-aOiuZ&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVJynOSKyC5juKDqjHWaAk7IjnEDTMVlZFJh9xwS5-dQuA&oe=62349FC0"width="350"height="350">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/123935611_388051358947323_8266017667751631875_n.jpg?_nc_cat=102&ccb=1-5&_nc_sid=aee45a&_nc_ohc=_NZFMqgNToMAX9pFUEO&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVIoKdq6tgj5QdyPUhGq5CMwJIfG_6XEsnz8aaPJ5ejM6g&oe=6232C2F7"width="500"height="350">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/51010785_391191214783223_5884318152883437568_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=aee45a&_nc_ohc=ZZt0it04yLkAX_FprpD&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVJtscJWoz_Mu19lQ9-98Q_pma1h4MFcQrSYb1o2kaeDvw&oe=623CD1F2"width="350"height="350">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/50780484_2245041178868519_7116626544499359744_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=aee45a&_nc_ohc=sMFOTqzgMFAAX-BBSqs&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVIZCoNXonxxPR5c2eGfbkgifuSu6v1yAZdFSetTmJK-ag&oe=623CDFC3"width="350"height="350">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/51426749_769622463415762_3217939714644377600_n.jpg?_nc_cat=100&ccb=1-5&_nc_sid=aee45a&_nc_ohc=g3TMI7fAa8gAX8SffFQ&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVJ702qyavZJwF_s158szbT8XamCMTWqg1SPU_j-IqzpxQ&oe=623C09C2"width="500"height="350">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/50846398_239034406974124_8606399847345422336_n.jpg?_nc_cat=105&ccb=1-5&_nc_sid=aee45a&_nc_ohc=BFjkSoN5BZ4AX-2TNv9&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVJ7-RUQJweEdaMsTSPT7RQrfI2mehqaPQFxDVxstCQqCA&oe=623B273C"width="350"height="350">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/50863648_1088035528066442_844549973809823744_n.jpg?_nc_cat=101&ccb=1-5&_nc_sid=aee45a&_nc_ohc=3Jto71ZAjBoAX-TLG2d&_nc_oc=AQkLrlzJtAqETDxYhcvboXZza04agPXBf_g_mmupKF-I8bVZMZSeYGQ8mlezRpo45J3Fc-E7F4AtftuTBw7YnYoU&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVLalDytm66U2JH0NZO07fPtbu9yrzZnqZU_cB3dt30XEw&oe=623CF661"width="350"height="350">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/51040486_1992689351025288_1652706812819931136_n.jpg?_nc_cat=107&ccb=1-5&_nc_sid=aee45a&_nc_ohc=JsUuSlsZAygAX-ntJTO&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVL0ipKTbU7tRZQF3JeT7Q2K7WgFNGqiAaIqjqyOMwv8fQ&oe=623D6A93"width="350"height="350">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/50767735_367987857328759_2294889120327008256_n.jpg?_nc_cat=107&ccb=1-5&_nc_sid=aee45a&_nc_ohc=OfDJc5qdfYMAX_J7Js7&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVLwn4aWYnbmESS1tc2dTEcIKzVu3mmyVibnDB5iPK0POQ&oe=623D40AD"width="350"height="350">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/51349529_143548723229591_667372483971645440_n.jpg?_nc_cat=102&ccb=1-5&_nc_sid=aee45a&_nc_ohc=QUIxLSKAXj4AX8SG_B0&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVKHUjYEWMXxkt-PvHkMtQoT_n1gwbyHSycVLYPp1h4eKA&oe=623C4445"width="350"height="350">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/50697449_392243264677279_9058269959238451200_n.jpg?_nc_cat=102&ccb=1-5&_nc_sid=aee45a&_nc_ohc=JbPYFEbYvQ8AX8C-gx6&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVJqlADwOK76vOea4PSFLI7uomW0IRk6w_30AL4iVXUS6Q&oe=623C9A40"width="350"height="350">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/51119280_602269560213740_8242069793239203840_n.jpg?_nc_cat=107&ccb=1-5&_nc_sid=aee45a&_nc_ohc=kM4d4YJv0GQAX8qNYjV&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVKA3dPCGcRPwIuBecYbFiiuFSHT6IFj57LPaotzeWhAnw&oe=623AC336"width="350"height="350">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/50921754_2322925974657763_2435203889411129344_n.jpg?_nc_cat=100&ccb=1-5&_nc_sid=aee45a&_nc_ohc=MRftlD3zk-QAX87HY9B&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVKuFauBl5zK1btoEDmgvD9Fvp_comCpGdDJwLdBNX_rNA&oe=623AAF4B"width="500"height="350">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/50822345_333487830588309_4658488908412092416_n.jpg?_nc_cat=100&ccb=1-5&_nc_sid=aee45a&_nc_ohc=kKnUFvb-9jsAX81jAcQ&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVKB3KuC6nCtcYGu4kZ7XrLQFVRQF-AgyG7J1UW2mg0i1w&oe=623DC13F"width="350"height="350">
+</div>
 
 </body>
 </html>
