done with Project Page

--- a/src/main/resources/templates/AboutMe.html
+++ b/src/main/resources/templates/AboutMe.html
@@ -4,9 +4,48 @@
     <meta charset="UTF-8">
     <title>About me</title>
 
-    <style></style>
+    <style>
+        body {
+            background-color: darkgrey;
+        }
+        .button {
+            background-color: white;
+            border: none;
+            color: black;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline;
+            font-size: 16px;
+        }
+        h1 {
+            display: flex;
+            justify-content: center;
+
+            font-size: 150px ;
+            font-family: Algerian;
+            color: white;
+
+            background-color: #10010c;
+        }
+        p {
+            text-align: center;
+            font-size: 50px;
+        }
+
+
+
+
+    </style>
 </head>
 <body>
-<p>mo</p>
+<div>
+    <h1>About Me</h1>
+</div>
+<div class="button" >
+    <a href="FrontPage">Go Back</a>
+</div>
+<p>Maintenance is under way</p>
+<img src="https://www.comunicaffe.com/wp-content/uploads/2013/07/under-construction1.jpg" width="1000" height="1000">
 </body>
 </html>
