--- a/src/main/resources/templates/Projects.html
+++ b/src/main/resources/templates/Projects.html
@@ -2,9 +2,79 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Projects</title>
+
+    <style>
+        body {
+            background-color: darkgrey;
+        }
+        .button {
+            background-color: white;
+            border: none;
+            color: black;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline;
+            font-size: 16px;
+
+        }
+        h1 {
+            display: flex;
+            justify-content: center;
+
+            font-size: 150px ;
+            font-family: Algerian;
+            color: white;
+
+            background-color: #10010c;
+        }
+        p {
+            font-size: 50px;
+            border-style: dotted;
+            border-top: black;
+            border-left: black;
+            border-right: black ;
+        }
+        p2 {
+            font-size: 25px;
+            display: flex;
+            justify-content: space-evenly;
+
+        }
+        p3 {
+            font-size: 25px;
+            display: flex;
+            justify-content: space-evenly;
+            margin-top: 100px;
+        }
+
+
+
+
+    </style>
 </head>
 <body>
+<div>
+    <h1>Projects</h1>
+</div>
+<div class="button" >
+    <a href="FrontPage">Go Back</a>
+</div>
+<div>
+    <p>
+       all Projects in school are kept on <a href="https://github.com/"> Github.com</a> heres a few of mine:
+    </p>
 
+    <p2>
+        <a href="https://github.com/Mo-Mans0ur/MoviesApplication">MoviesApplication</a> <a href="https://github.com/Mo-Mans0ur/Haiku">Haiku Poem</a>
+        <a href="https://github.com/Mo-Mans0ur/CoffeeCollective">Coffee Collective</a> <a href="https://github.com/Mo-Mans0ur/Tamagotchi">Tamagotchi</a>
+        <a href="https://github.com/Mo-Mans0ur/Code-Breaker">Code Breaker</a> <a href="https://github.com/Mo-Mans0ur/Desert.Island">Desert Island</a>
+    </p2>
+    <p3>
+        <a href="https://github.com/Mo-Mans0ur/Rock.Paper.Scissors">Rock, Paper, Scissors</a> <a href="https://github.com/Mo-Mans0ur/MethodProject">Method Project</a>
+        <a href="https://github.com/Mo-Mans0ur/Bin2DecApplication">Binary to Decimal</a> <a href="https://github.com/Mo-Mans0ur/TheTabloid">The Tabloid</a>
+    </p3>
+</div>
 </body>
 </html>
