About me page in Progress

--- a/src/main/resources/templates/AboutMe.html
+++ b/src/main/resources/templates/AboutMe.html
@@ -20,32 +20,58 @@
         }
         h1 {
             display: flex;
-            justify-content: center;
+            justify-content: right;
 
-            font-size: 150px ;
+            font-size: 130px ;
             font-family: Algerian;
             color: white;
-
+            border-style: solid;
+            border-width: 20px;
+            border-color: #10010c;
             background-color: #10010c;
         }
         p {
-            text-align: center;
-            font-size: 50px;
-        }
 
+        }
+        #me{
+
+            margin-left: 950px;
+
+        }
 
 
 
     </style>
 </head>
 <body>
-<div>
+
+<div class="header">
     <h1>About Me</h1>
 </div>
+
+<img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/274206912_687916995719442_7874310952597255828_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=aee45a&_nc_ohc=eL6EPpfsHeIAX8LNNm3&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVJHDbmkpJJ22nvwctGEPi6tN1H1M3FAfC9j7flCtArd5w&oe=623B7BC2"width="500" height="200">
+
 <div class="button" >
     <a href="FrontPage">Go Back</a>
 </div>
-<p>Maintenance is under way</p>
-<img src="https://www.comunicaffe.com/wp-content/uploads/2013/07/under-construction1.jpg" width="1000" height="1000">
+
+<div id="me">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/273887458_1114916225996737_1461966487532767008_n.jpg?_nc_cat=107&ccb=1-5&_nc_sid=aee45a&_nc_ohc=nLysrD_QR6UAX84nXfs&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVIa_0HZfUPPq471k3GRAsqv95UXqRNH33v8sIjDXU57FA&oe=623B7F56"width="300" height="400">
+</div>
+
+<div class="text">
+    <h2>Info</h2>
+    <p>
+        Hello my name is Mohammad Mansour but my friends call me Mo, it's easier to remember. Im a student at a school called KEA
+        stands for Københavns Ervhervsakademi, Cophenhagen School of Design And Technology in english i Study Data Science
+    </p>
+    <p2>
+        in my free time i work at Action Center Amager, we have all kinds of stuff like Paintball, Gokart even Vr.
+    </p2>
+    <p3>
+
+    </p3>
+</div>
+
 </body>
 </html>
