Basically done only need to put style in static package

--- a/src/main/resources/templates/AboutMe.html
+++ b/src/main/resources/templates/AboutMe.html
@@ -8,6 +8,7 @@
         body {
             background-color: darkgrey;
         }
+
         .button {
             background-color: white;
             border: none;
@@ -17,7 +18,10 @@
             text-decoration: none;
             display: inline;
             font-size: 16px;
+
+
         }
+
         h1 {
             display: flex;
             justify-content: right;
@@ -30,14 +34,71 @@
             border-color: #10010c;
             background-color: #10010c;
         }
-        p {
+
+        #header-img{
+            margin-top: -299px;
+            margin-bottom: 100px;
+        }
+
+        .me{
+            display: flex;
+            justify-content: right;
+            margin-bottom: -20px;
+        }
+
+        .text {
+            display: inline-block;
+            width: 700px;
+            height: 300px;
+            justify-content: left;
+            font-size: 25px;
+            font-family: "Berlin Sans FB Demi";
+
+            margin-top: -3700px;
+        }
+
+        #twitter {
+            background-color: #1DA1F2;
+            color: white;
+            padding: 14px 25px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            margin-left: 10px;
 
         }
-        #me{
 
-            margin-left: 950px;
-
+        #facebook {
+            background-color: #4267B2;
+            color: white;
+            padding: 14px 25px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            margin-left: 10px;
         }
+
+        #instagram {
+            background-color: #C13584;
+            color: white;
+            padding: 14px 25px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            margin-left: 10px;
+        }
+
+        #github {
+            background-color: black;
+            color: white;
+            padding: 14px 25px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            margin-left: 10px;
+        }
+
+
 
 
 
@@ -49,27 +110,48 @@
     <h1>About Me</h1>
 </div>
 
-<img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/274206912_687916995719442_7874310952597255828_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=aee45a&_nc_ohc=eL6EPpfsHeIAX8LNNm3&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVJHDbmkpJJ22nvwctGEPi6tN1H1M3FAfC9j7flCtArd5w&oe=623B7BC2"width="500" height="200">
+<div id="header-img">
+
+<img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/274206912_687916995719442_7874310952597255828_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=aee45a&_nc_ohc=eL6EPpfsHeIAX8LNNm3&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVJHDbmkpJJ22nvwctGEPi6tN1H1M3FAfC9j7flCtArd5w&oe=623B7BC2"width="500" height="213">
+
+</div>
 
 <div class="button" >
     <a href="FrontPage">Go Back</a>
 </div>
 
-<div id="me">
-    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/273887458_1114916225996737_1461966487532767008_n.jpg?_nc_cat=107&ccb=1-5&_nc_sid=aee45a&_nc_ohc=nLysrD_QR6UAX84nXfs&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVIa_0HZfUPPq471k3GRAsqv95UXqRNH33v8sIjDXU57FA&oe=623B7F56"width="300" height="400">
+<div id="twitter">
+    <a href="https://twitter.com/ActualPhant0m">Twitter</a>
+</div>
+
+<div id="facebook">
+    <a href="https://www.facebook.com/Mansour2300">Facebook</a>
+</div>
+
+<div id="instagram">
+    <a href="https://www.instagram.com/mo_mansour1998/">Instagram</a>
+</div>
+<div id="github">
+    <a href="https://github.com/Mo-Mans0ur">Github</a>
+</div>
+
+<div class="me">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/274140844_286354066938730_1893850272384511631_n.jpg?_nc_cat=104&ccb=1-5&_nc_sid=aee45a&_nc_ohc=u-LRv0caDxYAX9tEu4u&_nc_oc=AQnUYhqFsqYVn-lbwofiN_zP_W8Yeqq1r4MpZxSaM272C53wWVuYE0cDLZZFRuAYFcw&_nc_ht=scontent.xx&oh=03_AVLbYgWYeeHTErtzrVxbApBFhDEfMYs4cvZVVRuBbIy8PQ&oe=623C4D25"width="500" height="400">
 </div>
 
 <div class="text">
     <h2>Info</h2>
     <p>
-        Hello my name is Mohammad Mansour but my friends call me Mo, it's easier to remember. Im a student at a school called KEA
-        stands for Københavns Ervhervsakademi, Cophenhagen School of Design And Technology in english i Study Data Science
+        Hello my name is Mohammad Mansour but my friends call me Mo, it's easier to remember. i Study Data Science, Im a student at a school called KEA
+        stands for Københavns Ervhervsakademi, Copenhagen School of Design And Technology in english.
     </p>
     <p2>
-        in my free time i work at Action Center Amager, we have all kinds of stuff like Paintball, Gokart even Vr.
+        i work at Action Center Amager as an instructor, we have all kinds of stuff like Paintball, Gokart even Vr.
     </p2>
-    <p3>
 
+    <p3>
+        i have lebanese background, but i have lived in denmark my whole life. in my free time i draw a lot,
+        you can see some of the drawings <a href="ArtGallery.html">Here.</a> in school we have made some projects, you can see them <a href="Projects.html">Here.</a>
     </p3>
 </div>
 
