--- a/src/main/resources/templates/Projects.html
+++ b/src/main/resources/templates/Projects.html
@@ -30,11 +30,12 @@
             background-color: #10010c;
         }
         p {
-            font-size: 50px;
+            font-size: 25px;
             border-style: dotted;
             border-top: black;
             border-left: black;
             border-right: black ;
+            margin-top: 30px;
         }
         p2 {
             font-size: 25px;
@@ -51,16 +52,17 @@
 
 
 
-
     </style>
 </head>
 <body>
 <div>
     <h1>Projects</h1>
 </div>
+
 <div class="button" >
     <a href="FrontPage">Go Back</a>
 </div>
+
 <div>
     <p>
        all Projects in school are kept on <a href="https://github.com/"> Github.com</a> heres a few of mine:
@@ -78,3 +80,8 @@
 </div>
 </body>
 </html>
+
+
+
+
+
