--- a/src/main/resources/templates/ArtGallery.html
+++ b/src/main/resources/templates/ArtGallery.html
@@ -37,7 +37,9 @@
         font-size: 25px;
 
     }
-
+    .drawings {
+        margin-left: 30px;
+    }
 
 
 </style>
@@ -59,12 +61,13 @@
     <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/274467784_952653085456429_8824444153034737026_n.jpg?_nc_cat=100&ccb=1-5&_nc_sid=aee45a&_nc_ohc=63PisCpNFWoAX_r5OE9&_nc_ht=scontent.xx&oh=03_AVJ7SVESRbBExY2UPdM1DsgwQcXJIePnAPOq_NFYaaEK5Q&oe=623B7BD0"width="350"height="500">
     <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/123831993_716628998946980_1595450020402545602_n.jpg?_nc_cat=111&ccb=1-5&_nc_sid=aee45a&_nc_ohc=iWxzEXmAfFoAX8zkOM7&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVIBRJFlOJyLGq4WN0LtqknUex1Y2pNKfe47qvxYXagQHg&oe=623236A2"width="350"height="500">
     <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/51045553_2105812609462377_8870708222026055680_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=aee45a&_nc_ohc=hb-X-UsujvAAX-2ZBYJ&_nc_oc=AQlImZGBnSlEi2ze3-wD_hDpeXJPaCkVoldPr_wDXLJXPsdb4h13elC0y_rrg0XiydM7P4M2f-sn5GGcGOIJ5_FB&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVI3a3qeI9tp8kXCx81Pv2UFcC91SrbOZuQb39y9lPnwiA&oe=623D54AD"width="350"height="500">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/274191434_487239519744680_8817835997992682784_n.jpg?_nc_cat=105&ccb=1-5&_nc_sid=aee45a&_nc_ohc=XGsYIchdCTkAX-lbmSF&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVJhek2xTMau1EaqLVmhNgKT1RgYnbJiXtB879kMgw2RVw&oe=623C5EED"width="400" height="350">
     <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/274466805_656266978922568_6057873086577396274_n.jpg?_nc_cat=109&ccb=1-5&_nc_sid=aee45a&_nc_ohc=dBDy32DM4JYAX8TM-MA&_nc_ht=scontent.xx&oh=03_AVLPfxuW90dsY_yTz-9Rn_0EQ9CRQwNe9MwCnll6uZIVxg&oe=623AAF62"width="350"height="350">
     <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/274140324_684090622953278_2533717554666287833_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=aee45a&_nc_ohc=VMJSSyIJ0vMAX8nssUw&_nc_ht=scontent.xx&oh=03_AVLQTqIhexwPIa8-p_KPBH7n7-cVdm4MasW7dlJvEeE4Sg&oe=623D9BBC"width="350"height="350">
     <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/273975395_669013587621239_1574720120909373820_n.jpg?_nc_cat=109&ccb=1-5&_nc_sid=aee45a&_nc_ohc=V2h_idAfNv8AX98pLze&_nc_ht=scontent.xx&oh=03_AVKKvj8B4lKsyllGScexOewcpTssfNuwrdkVTq9ZYJfSUQ&oe=623C431A"width="350"height="350">
     <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/273821673_381252650004861_8058406445136819851_n.jpg?_nc_cat=101&ccb=1-5&_nc_sid=aee45a&_nc_ohc=fB00GDXLV_gAX90KXY-&_nc_ht=scontent.xx&oh=03_AVJm9ckNIBYRymkkQvfQMnWM-5BtPK-AEeEE6WU7dgT7DQ&oe=623D7BE4"width="450"height="350">
     <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/274010739_643469163647328_7660138475509687699_n.jpg?_nc_cat=108&ccb=1-5&_nc_sid=aee45a&_nc_ohc=ProrUUGIeV4AX8nrjdw&_nc_ht=scontent.xx&oh=03_AVLROHQxAQC3ybd6JxTUuBmaoXSk4LL1TaFOyLMMoW-L4A&oe=623B1D72"width="500"height="350">
-    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/273914216_490382495817660_1056514205604716541_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=aee45a&_nc_ohc=h-kPzBveYvsAX-DeZOf&_nc_ht=scontent.xx&oh=03_AVJqZv6FMivUx9Gud92qGgy7UxZ5zJaDhES0uWyW4Jpc0Q&oe=623D4155"width="400"height="350">
+    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/273914216_490382495817660_1056514205604716541_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=aee45a&_nc_ohc=h-kPzBveYvsAX-DeZOf&_nc_ht=scontent.xx&oh=03_AVJqZv6FMivUx9Gud92qGgy7UxZ5zJaDhES0uWyW4Jpc0Q&oe=623D4155"width="500"height="350">
     <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/246866644_7057055867653808_4857953987996829800_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=aee45a&_nc_ohc=3HLk6kzvp5AAX9qqRyK&_nc_oc=AQnCW9RpLqEfaOrR37aQM5HpMd2fzQoolnLvf7KxNZSd4cCsTnt3fu8TbLz7oyn14tSyfo3BmcYE5lC6KkCzDkyE&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVK3K7iwJKOeyfztdyYB-QdlBMyUSHhLy3mWKCIHnGca-w&oe=62338FA2"width="350"height="350">
     <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/123795082_402283650809841_6290328995474885533_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=aee45a&_nc_ohc=I2MhxdVj08wAX-_S-VI&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVK71z2Q4chTNdopiBAjQ2yYymSaZ3pmxenC9NjXejM7KQ&oe=6233DB68"width="350"height="350">
     <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/124114365_359350705171187_194686494935938793_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=aee45a&_nc_ohc=M5WKOI3qf7oAX_8Vtq6&_nc_oc=AQmzOiu7O9VewNpb-3Dt02l8kEmixh5Zrw8lLl14LLFnrUytUn5vKpqoF1oIPaRNP4b2s1yeuO-JgKGbnsWKCieq&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AVKcX_3DmdLmWV5cnD8WNovOVI_0eqsfTm_Ncz30rJbrZg&oe=6233F21C"width="350"height="350">
