--- a/src/main/resources/templates/Projects.html
+++ b/src/main/resources/templates/Projects.html
@@ -4,55 +4,8 @@
     <meta charset="UTF-8">
     <title>Projects</title>
 
-    <style>
-        body {
-            background-color: darkgrey;
-        }
-        .button {
-            background-color: white;
-            border: none;
-            color: black;
-            padding: 15px 32px;
-            text-align: center;
-            text-decoration: none;
-            display: inline;
-            font-size: 16px;
-
-        }
-        h1 {
-            display: flex;
-            justify-content: center;
-
-            font-size: 150px ;
-            font-family: Algerian;
-            color: white;
-
-            background-color: #10010c;
-        }
-        p {
-            font-size: 25px;
-            border-style: dotted;
-            border-top: black;
-            border-left: black;
-            border-right: black ;
-            margin-top: 30px;
-        }
-        p2 {
-            font-size: 25px;
-            display: flex;
-            justify-content: space-evenly;
-
-        }
-        p3 {
-            font-size: 25px;
-            display: flex;
-            justify-content: space-evenly;
-            margin-top: 100px;
-        }
-
-
-
-    </style>
+    //link to the styles
+    <link rel="stylesheet" href="projects-styles.css">
 </head>
 <body>
 <div>
@@ -76,6 +29,7 @@
     <p3>
         <a href="https://github.com/Mo-Mans0ur/Rock.Paper.Scissors">Rock, Paper, Scissors</a> <a href="https://github.com/Mo-Mans0ur/MethodProject">Method Project</a>
         <a href="https://github.com/Mo-Mans0ur/Bin2DecApplication">Binary to Decimal</a> <a href="https://github.com/Mo-Mans0ur/TheTabloid">The Tabloid</a>
+        <a href="https://github.com/Mo-Mans0ur/PostNumbers-And-Cities">PostNumbers and Cities</a>
     </p3>
 </div>
 </body>
