--- a/src/main/resources/templates/FrontPage.html
+++ b/src/main/resources/templates/FrontPage.html
@@ -4,81 +4,9 @@
     <meta charset="UTF-8">
     <title>FrontPage</title>
 
-    <style>
-        body {
-            background-color: darkgrey;
-         }
+    //link to the styles
+    <link rel="stylesheet" href="frontpage-styles.css">
 
-        .navigation {
-
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            justify-content: space-evenly;
-
-            background-color: #10010c;
-            border-bottom-color: antiquewhite;
-        }
-
-
-        h1 {
-
-            font-family: Algerian;
-            margin-top: 41px;
-            font-size: 50px;
-        }
-        h2 {
-
-            font-family: Algerian;
-            font-size: 50px;
-        }
-        h3 {
-
-            font-family: Algerian;
-            margin-top: 39px;
-            font-size: 50px;
-        }
-
-
-        .wells {
-            display: flex;
-            justify-content: center;
-            margin-top: 100px;
-            margin-bottom: 170px;
-        }
-
-
-        .text {
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            font-size: 25px;
-            margin-top: -160px;
-
-        }
-
-        p2 {
-            display: flex;
-            justify-content: center;
-            font-style: italic;
-            font-size: 35px;
-            margin-top: 40px;
-            margin-left: 30px;
-        }
-        p3 {
-            display: flex;
-            justify-content: center;
-            font-size: 25px;
-            margin-top: 40px;
-        }
-
-
-        #memes {
-            display: flex;
-            justify-content: space-around;
-            margin-top: 40px;
-        }
-    </style>
 </head>
 <body>
 
@@ -118,6 +46,9 @@
     <img src="https://assets-global.website-files.com/5f3c19f18169b62a0d0bf387/60d33be9ea3ab2738bf56e0d_rO0ikUo-hnDwgg9SOQOCEGZGVmnMAzwWIdeUhraC6yoIUcPu6rOs3p9MojWC-BrpT2rqCTxRNg8WKl8cJYlgpScy91C25V0qV-DOnjRsv_FzYGY_6MrLFzNtCjXcTtN7x6-b4T1b.png"width="400" height="400">
     <img src="https://assets-global.website-files.com/5f3c19f18169b62a0d0bf387/60d33bed2f9c710d07b87e46_j_nvR0IzCf_p7I48K25FPArjljVHgn9nyzrTjs9Y3fN6SWjrhZN31UtY7K0mLmMc11PA3ITO3Pdx2R4aq3ZKnh-Tkp5Id1pwFUssGEYZVNy2dfrtsvZ2aC2bZbrnUyd-gqgKKEja.gif"width="400"height="400">
 </div>
-
+<div id="check-box">
+    <input type="checkbox" id="check" class="toggle">
+    <label for="check">Checked?</label>
+</div>
 </body>
 </html>
