--- a/src/main/resources/templates/AboutMe.html
+++ b/src/main/resources/templates/AboutMe.html
@@ -1,12 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <title>About me</title>
 
-    //link to the styles
-    <link rel="stylesheet" href="aboutme-styles.css">
+    <style>
+        body {
+            background-color: darkgrey;
+        }
+
+        .button {
+            background-color: white;
+            border: none;
+            color: black;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline;
+            font-size: 16px;
+
+
+        }
+
+        h1 {
+            display: flex;
+            justify-content: right;
+
+            font-size: 130px ;
+            font-family: Algerian;
+            color: white;
+            border-style: solid;
+            border-width: 20px;
+            border-color: #10010c;
+            background-color: #10010c;
+        }
+
+        #header-img{
+            margin-top: -299px;
+            margin-bottom: 100px;
+        }
+
+        .me{
+            display: flex;
+            justify-content: right;
+            margin-bottom: -20px;
+        }
+
+        .text {
+            display: inline-block;
+            width: 700px;
+            height: 300px;
+            justify-content: left;
+            font-size: 25px;
+            font-family: "Berlin Sans FB Demi";
+
+            margin-top: -3700px;
+        }
+
+        #twitter {
+            background-color: #1DA1F2;
+            color: white;
+            padding: 14px 25px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            margin-left: 10px;
+
+        }
+
+        #facebook {
+            background-color: #4267B2;
+            color: white;
+            padding: 14px 25px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            margin-left: 10px;
+        }
+
+        #instagram {
+            background-color: #C13584;
+            color: white;
+            padding: 14px 25px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            margin-left: 10px;
+        }
+
+        #github {
+            background-color: black;
+            color: white;
+            padding: 14px 25px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            margin-left: 10px;
+        }
+
+
+
+
+
+    </style>
 </head>
 <body>
 
