--- a/src/main/resources/templates/ArtGallery.html
+++ b/src/main/resources/templates/ArtGallery.html
@@ -1,13 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<style>
 
+    body {
+    background-color: darkgrey;
+    }
+
+    .button {
+        background-color: white;
+        border: none;
+        color: black;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline;
+        font-size: 16px;
+
+    }
+
+    h1 {
+        display: flex;
+        justify-content: center;
+
+        font-size: 150px ;
+        font-family: Algerian;
+        color: white;
+
+        background-color: #10010c;
+
+    }
+
+    p {
+        display: flex;
+        justify-content: center;
+        font-size: 25px;
+
+    }
+    .drawings {
+        margin-left: 30px;
+    }
+
+
+</style>
 <head>
     <meta charset="UTF-8">
     <title>Art Gallery</title>
-
-    //link to the styles
-    <link rel="stylesheet" href="artgallery-styles.css">
 </head>
 <body>
 <div>
