--- a/src/main/resources/templates/Projects.html
+++ b/src/main/resources/templates/Projects.html
@@ -4,8 +4,55 @@
     <meta charset="UTF-8">
     <title>Projects</title>
 
-    //link to the styles
-    <link rel="stylesheet" href="projects-styles.css">
+    <style>
+        body {
+            background-color: darkgrey;
+        }
+        .button {
+            background-color: white;
+            border: none;
+            color: black;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline;
+            font-size: 16px;
+
+        }
+        h1 {
+            display: flex;
+            justify-content: center;
+
+            font-size: 150px ;
+            font-family: Algerian;
+            color: white;
+
+            background-color: #10010c;
+        }
+        p {
+            font-size: 25px;
+            border-style: dotted;
+            border-top: black;
+            border-left: black;
+            border-right: black ;
+            margin-top: 30px;
+        }
+        p2 {
+            font-size: 25px;
+            display: flex;
+            justify-content: space-evenly;
+
+        }
+        p3 {
+            font-size: 25px;
+            display: flex;
+            justify-content: space-evenly;
+            margin-top: 100px;
+        }
+
+
+
+    </style>
 </head>
 <body>
 <div>
