--- a/src/main/resources/templates/FrontPage.html
+++ b/src/main/resources/templates/FrontPage.html
@@ -79,7 +79,10 @@
             margin-top: 40px;
         }
 
-
+        #check-box {
+            margin-top: -900px;
+            font-size: 25px;
+        }
 
         input[type="checkbox"].toggle {
             opacity: 0;
@@ -89,10 +92,56 @@
 
         }
 
+        input[type="checkbox"].toggle + label {
+            position: relative;
+            display: flex;
+            align-items: center;
+            cursor: pointer;
+
+        }
+
+        input[type="checkbox"].toggle + label::before {
+            content: "";
+            width: 2em;
+            height: 1em;
+            background-color: hsl(0,80%,90%);
+            border-radius: 1em;
+            margin-right: .25em;;
+            transition: 200ms ease-in-out;
+
+        }
+
+        input[type="checkbox"].toggle + label::after {
+            position: absolute;
+            left: .1em;
+            content: "";
+            width: .9em;
+            height: .9em;
+            background-color: hsl(0,80%,60%);
+            border-radius: 1em;
+
+            transition: 200ms ease-in-out;
+
+        }
+
+        input[type="checkbox"].toggle:checked + label::before {
+            background-color: hsl(100,70%,90%);
+
+        }
+
+        input[type="checkbox"].toggle:checked + label::after {
+            transform: translateX(100%);
+            background-color: hsl(100,80%,60%);
+
+
+        }
+
         input[type="checkbox"].toggle:checked + label {
-            color: red;
             margin-top: -900px;
         }
+
+
+
 
 
     </style>
@@ -137,7 +186,7 @@
 </div>
 <div id="check-box">
     <input type="checkbox" id="check" class="toggle">
-    <label for="check">Checked?</label>
+    <label for="check">⬅ useless</label>
 </div>
 </body>
 </html>
