--- a/src/main/resources/templates/FrontPage.html
+++ b/src/main/resources/templates/FrontPage.html
@@ -186,7 +186,7 @@
 </div>
 <div id="check-box">
     <input type="checkbox" id="check" class="toggle">
-    <label for="check">⬅ useless</label>
+    <label for="check">⬅ dont click it</label>
 </div>
 </body>
 </html>
