--- a/src/main/resources/templates/FrontPage.html
+++ b/src/main/resources/templates/FrontPage.html
@@ -79,7 +79,8 @@
             margin-top: 40px;
         }
 
-        #check-box {
+        /* switch */
+        #switch {
             margin-top: -900px;
             font-size: 25px;
         }
@@ -139,7 +140,7 @@
         input[type="checkbox"].toggle:checked + label {
             margin-top: -900px;
         }
-
+        /* /switch */
 
 
 
@@ -184,7 +185,7 @@
     <img src="https://assets-global.website-files.com/5f3c19f18169b62a0d0bf387/60d33be9ea3ab2738bf56e0d_rO0ikUo-hnDwgg9SOQOCEGZGVmnMAzwWIdeUhraC6yoIUcPu6rOs3p9MojWC-BrpT2rqCTxRNg8WKl8cJYlgpScy91C25V0qV-DOnjRsv_FzYGY_6MrLFzNtCjXcTtN7x6-b4T1b.png"width="400" height="400">
     <img src="https://assets-global.website-files.com/5f3c19f18169b62a0d0bf387/60d33bed2f9c710d07b87e46_j_nvR0IzCf_p7I48K25FPArjljVHgn9nyzrTjs9Y3fN6SWjrhZN31UtY7K0mLmMc11PA3ITO3Pdx2R4aq3ZKnh-Tkp5Id1pwFUssGEYZVNy2dfrtsvZ2aC2bZbrnUyd-gqgKKEja.gif"width="400"height="400">
 </div>
-<div id="check-box">
+<div id="switch">
     <input type="checkbox" id="check" class="toggle">
     <label for="check">⬅ dont click it</label>
 </div>
